# quickshell-nix

./: .gitignore  AGENTS.md  AppShell.qml  README.md  flake.nix
Common/: Animations.qml  Appearance.qml  KeystoneMotion.qml  Sizes.qml  WallpaperPickerTokens.qml  WidgetState.qml
Common/functions/: SearchUtils.js
Modules/Bar/: Bar.qml
Modules/Bar/QuickSettings/: Microphone.qml  Network.qml  QuickSettings.qml  SettingsButton.qml  Volume.qml
Modules/Bar/Tray/: Tray.qml  TrayItem.qml  TrayMenu.qml  TrayMenuEntry.qml
Modules/ControlCenter/: BezierCurveEditor.qml  BezierCurveLayerEditor.qml  GeneralPage.qml  MapTilerApiSettingsCard.qml  ThemePage.qml  WallpaperColorPicker.qml  WallpaperPage.qml  WeatherApiSettings.qml
Modules/DynamicIsland/: DynamicIsland.qml
Modules/FilePicker/: FilePickerWindow.qml
Modules/Keystone/: Keystone.qml
Modules/Keystone/ClockContent/: ClockContent.qml
Modules/Keystone/DashboardContent/: DashboardContent.qml  DashboardMediaCard.qml  DashboardMediaControls.qml  DashboardMediaProgress.qml  HoleCardCarousel.qml
Modules/Keystone/Hub/: HubContent.qml
Modules/Keystone/LyricsContent/: LyricsContent.qml
Modules/Keystone/Media/: Media.qml
Modules/Keystone/MediaContent/: MediaContent.qml
Modules/Keystone/NotificationContent/: NotificationContent.qml
Modules/Keystone/OverviewContent/: CalendarWidget.qml  OverviewContent.qml  ScheduleWidget.qml  SysInfoWidget.qml
Modules/Keystone/Styles/Bangs/: Bangs.qml
Modules/Keystone/Styles/Pill/: Pill.qml
Modules/Keystone/Styles/Recording/: AudioRecordingVisual.qml  AudioStopButton.qml  AudioWaveform.qml  PillRecordingVisual.qml
Modules/Keystone/Styles/Shared/: KeystoneSurface.qml
Modules/Keystone/Tools/: ToolsBackend.qml  ToolsContent.qml
Modules/Keystone/VolumeContent/: VolumeContent.qml
Modules/Keystone/WallpaperContent/: WallpaperContent.qml
Modules/Keystone/WeatherContent/: FrostedMapSurface.qml  MapLegend.qml  WeatherContent.qml  WeatherMapCard.qml
Modules/Keystone/audio/: AudioContent.qml
Modules/QuickSettings/: QuickSettingsSurface.qml
Modules/RegionSelector/: RegionSelectionWindow.qml  RegionSelector.qml
Modules/Sidebars/Left/: DailyForecastTrendCard.qml  HourlyForecastTrendCard.qml  SystemView.qml  WeatherAnimatedValue.qml  WeatherAqiCard.qml  WeatherAstroCard.qml  WeatherBackground.qml  WeatherBackgroundPreview.qml  WeatherBlob.qml  WeatherHumidityCard.qml  WeatherPrecipitationCard.qml  WeatherPressureCard.qml  WeatherRevealCard.qml  WeatherUvCard.qml  WeatherView.qml  WeatherVisibilityCard.qml  WeatherWindCard.qml
Modules/Sidebars/Right/: AudioContent.qml  BluetoothContent.qml  IdleContent.qml  MicrophoneContent.qml  NetworkContent.qml  PageTransitionLayer.qml  QuickSettings.qml  SettingsContent.qml
Services/: AudioRecordingService.qml  BluetoothService.qml  IdleInhibitorSurface.qml  IdleService.qml  NetworkService.qml  PersonalizationConfig.qml  RecordingCoordinator.qml  RecordingService.qml  RegionSelectionService.qml  ScreencastService.qml  ThemeService.qml  TrayService.qml  Volume.qml  WallpaperService.qml  Wlsunset.qml
Widgets/audio/: ApplicationVolumeRow.qml  VolumeSlider.qml
Widgets/common/: InlineStatusBanner.qml  MaterialRippleButton.qml  QuickMaterialSlider.qml  SettingsRow.qml  SettingsSection.qml  StyledButtonGroup.qml  StyledRectangularShadow.qml  WidgetPanel.qml
core/: CMakeLists.txt
core/cli/: CMakeLists.txt
core/cli/src/: command_result.h  command_router.cpp  command_router.h  main.cpp
core/cli/src/commands/: audio_command.cpp  audio_command.h  cast_command.cpp  cast_command.h  doctor_command.cpp  doctor_command.h  record_command.cpp  record_command.h
core/plugin/audio/: CMakeLists.txt
core/plugin/audio/src/: audio_level_provider.cpp  audio_level_provider.h
core/plugin/m3shapes/: CMakeLists.txt  test.qml
core/plugin/m3shapes/shaders/: smoothshape.frag  smoothshape.vert
core/plugin/m3shapes/src/: MaterialShapeItem.cpp  MaterialShapeItem.hpp  SmoothShapeMaterial.cpp  SmoothShapeMaterial.hpp
core/plugin/niri/src/: niri_plugin.cpp  niri_plugin.h
core/plugin/weather/src/: weather_list_model.cpp
core/plugin/weathermap/src/: weather_map_plugin.cpp  weather_map_plugin.h
core/src/: CMakeLists.txt  audio_level_collector.cpp  audio_level_collector.h  audio_visual_analyzer.cpp  audio_visual_analyzer.h  niri_cast_parser.cpp  niri_cast_parser.h  niri_ipc_client.cpp  niri_ipc_client.h  niri_types.h  openmeteo_client.cpp  weather_backend.cpp  weather_map_provider.cpp  weather_map_provider.h
core/src/m3shapes/: CMakeLists.txt  UPSTREAM.txt
core/src/m3shapes/core/: CornerRounding.hpp  Cubic.cpp  Cubic.hpp  Feature.cpp  Feature.hpp  Point.hpp  RoundedPolygon.cpp  RoundedPolygon.hpp  Utils.hpp
core/src/m3shapes/morph/: FeatureMapping.cpp  FeatureMapping.hpp  FloatMapping.cpp  FloatMapping.hpp  Morph.cpp  Morph.hpp  PolygonMeasure.cpp  PolygonMeasure.hpp
core/src/m3shapes/shapes/: MaterialShapes.cpp  MaterialShapes.hpp  Shapes.cpp  Shapes.hpp
core/src/recording/: capture_session_guard.cpp  capture_session_guard.h  dependency_probe.cpp  dependency_probe.h  ffmpeg_postprocessor.cpp  ffmpeg_postprocessor.h  gsr_backend.cpp  gsr_backend.h  process_identity.cpp  process_identity.h  recorder_controller.cpp  recorder_controller.h  recording_state_store.cpp  recording_state_store.h  recording_types.cpp  recording_types.h  slurp_selector.cpp  slurp_selector.h
core/src/recording/audio/: audio_file_finalizer.cpp  audio_file_finalizer.h  audio_recorder_controller.cpp  audio_recorder_controller.h  audio_recording_state_store.cpp  audio_recording_state_store.h  audio_recording_types.cpp  audio_recording_types.h  audio_source_resolver.cpp  audio_source_resolver.h  ffmpeg_audio_backend.cpp  ffmpeg_audio_backend.h
core/tests/: CMakeLists.txt  audio_visual_analyzer_test.cpp  fake_recording_tool.cpp  key_integration_test.cpp  m3shapes_test.cpp  recording_core_test.cpp
licenses/: AnimatedWeatherCards-MIT.txt
scripts/capture/: record.sh
